fixed typos before presentation

--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -640,9 +640,9 @@
     "### Features I'm moving on with\n",
     "| Feature | Reason | \n",
     "|:--------|:-----------|\n",
-    "|**square_feet**| From our Spearman's R test we saw that there is a 0.48 correlation between ```square_feet``` and ```home_value```|\n",
-    "|**bath_bed_ratio**| From our Spearman's R test we saw that there is a 0.32 correlation between ```bath_bed_ratio``` and ```home_value```|\n",
-    "|**2017_age**| From our Pearson's R test we saw that there is a 0.32 correlation between ```2017_age``` and ```home_value```|\n",
+    "|**square_feet**| From our Spearman's test we saw that the correlation coefficient is 0.48 between ```square_feet``` and ```home_value```|\n",
+    "|**bath_bed_ratio**| From our Spearman's test we saw that the correlation coefficient is 0.32 between ```bath_bed_ratio``` and ```home_value```|\n",
+    "|**2017_age**| From our Spearman's test we saw that the correlation coefficient is 0.27 between ```2017_age``` and ```home_value```|\n",
     "|**county**| From our ANOVA test we see that there is a difference between the home values in each county|"
    ]
   },
